Uploaded image for project: 'Apache HAWQ (Retired)'
  1. Apache HAWQ (Retired)
  2. HAWQ-1838

Fix attribute typmod for CREATE TABLE AS SELECT

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 3.0.0.0
    • 3.1.0.0
    • DDL
    • None

    Description

      The type modifier of CONST used to miss in optimized query plan.
          The following 2 schemas denote the fix before and after.

          create table test_create_as_select_const
              as select 2.333::decimal(10,2), 'haha'::char(5), 'hehe'::varchar(6);
          \d test_create_as_select_const

          Append-Only "public.test_create_as_select_const"
           Column  |       Type        | Modifiers
          -------{}++{}---------------{}{}---------
           numeric | numeric           |
           bpchar  | character(5)      |
           varchar | character varying |

          Append-Only "public.test_create_as_select_const"
           Column  |         Type         | Modifiers
          -------{}++{}------------------{}{}---------
           numeric | numeric(10,2)        |
           bpchar  | character(5)         |
           varchar | character varying(6) |

      Attachments

        Activity

          People

            ztao1987 Zhenglin Tao
            ztao1987 Zhenglin Tao
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: