HAWQ-1838. fix attribute typmod for CREATE TABLE AS SELECT